# zellij-textual-navbar

./: .gitignore  pyproject.toml
navbar/: __init__.py  __main__.py  app.py  navbar.tcss  panes.py  status.py  widgets.py
tests/: conftest.py  test_commands_e2e.py  test_navbar_e2e.py  test_panes_e2e.py  test_rename_e2e.py  test_resize_e2e.py  test_sidebar_e2e.py  test_status_e2e.py  test_tab_ownership_e2e.py  test_visual_e2e.py
