[project]
name = "zellij-textual-navbar"
version = "0.1.0"
description = "Zellij navbar with Textual TUI and Playwright-style E2E testing"
requires-python = ">=3.12"
dependencies = [
    "textual>=3.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-timeout>=2.3",
    "pytest-html>=4.1",
    "pytest-textual-snapshot>=1.0",
]
web = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "jinja2>=3.1",
    "python-multipart>=0.0.18",
]
dev = [
    "ruff>=0.8",
]

[project.scripts]
navbar = "navbar.app:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
timeout = 60

[tool.ruff]
line-length = 88
